# Python_Fast_Api

./: README.md  main.py  package-lock.json  pyproject.toml  render.yaml  requirements.txt
config/: .env  database.py
controllers/: AreaControllar.py  CategoryController.py  CityController.py  DepartmentController.py  EmployeeController.py  LocationController.py  OfferController.py  ProductController.py  RatingControllar.py  RestaurantController.py  RoleControllar.py  StateController.py  SubCategoryController.py  UserControllar.py
models/: AreaModel.py  CategoryModel.py  CityModel.py  DepartmentModel.py  EmployeeModel.py  LocationModel.py  OfferModel.py  ProductModel.py  RatingModel.py  RestaurantModel.py  RoleModel.py  StateModel.py  SubCategoryModel.py  UserModel.py
python_fast_api/: main.py
python_fast_api.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python_fast_api/python_fast_api.egg-info/: PKG-INFO  SOURCES.txt
routes/: AreaRoutes.py  CategoryRoutes.py  CityRoutes.py  DepartmentRoutes.py  EmployeeRoutes.py  LocationRoute.py  OfferRoute.py  ProductRoutes.py  RatingRoutes.py  RestaurantRoutes.py  RoleRoutes.py  StateRoutes.py  SubCategoryRoutes.py  UserRoutes.py
utils/: CloudinaryUtil.py  SendMail.py
