
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "python_fast_api"
version = "0.1.0"
description = "A FastAPI project."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.70.0",
    "uvicorn[standard]>=0.15.0"
]

[project.urls]
Homepage = "https://example.com/"
Documentation = "https://example.com/docs"

[tool.setuptools.packages.find]
where = ["python_fast_api"]
